[package]
name = "instagram-scraper-rs"
version = "0.1.0"
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
edition = "2021"
categories = ["web-programming"]
description = "Scrapes an instagram user's photos and videos"
documentation = "https://docs.rs/instagram-scraper-rs"
homepage = "https://github.com/veeso/instagram-scraper-rs"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["instagram", "instagram-scraper", "scraper"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso/instagram-scraper-rs"

[dependencies]
const_format = "^0.2"
log = "^0.4"
reqwest = { version = "^0.11", default-features = false, features = [ "json", "cookies" ] }
scraper = "^0.13.0"
serde = { version = "^1", features = [ "derive" ] }
serde_json = "^1.0.0"
thiserror = "^1.0.0"

[dev-dependencies]
anyhow = "^1.0.0"
pretty_assertions = "^1.2.1"
tempfile = "3.2.0"
tokio = { version = "^1.20", features = [ "full" ] }
tracing = "^0.1"
tracing-subscriber = "^0.2"

[features]
default = [ "native-tls" ]
github-ci = []
no-log = [ "log/max_level_off" ]
native-tls = [ "reqwest/native-tls" ]
rustls = [ "reqwest/rustls-tls" ]

[[example]]
name = "scraper"
path = "examples/scraper.rs"
